fix bad merge